# Ventra-Audio-Search

./: .gitignore  README.md  docker-compose.yml  example.env
api/: Dockerfile  go.sum  main.go
api/ai/: embedding.go  llm.go  transcript.go
api/globalTypes/: search.go  types.go  utils.go
api/importer/: pools.go
api/postgres/: counters.go  tables.go
api/qdrant/: reads.go  worker.go
api/restApi/: health.go  import.go  search.go  server.go  utils.go
api/searcher/: lexicalOnly.go  normalSearch.go  semanticOnly.go  utils.go  worker.go
backend/: Dockerfile  go.mod  go.sum  main.go
backend/AudioDataRouter/: import.go  utils.go  worker.go
backend/FlowManager/: flow_worker.go  import.go  utils.go  worker.go
backend/ai/: embedding.go  json.go  llm.go  ollama_reqest.go  transcript.go  types.go  utils.go
backend/api/: handler.go  health.go  import.go  search.go  server.go  utils.go
backend/globalTypes/: search.go  types.go
backend/globalUtils/: downloader.go  env.go  file.go  hasher.go  nonStackingEvent.go  (+1 more)
charts/: Import-Chart.drawio  Import-Thread-Model.drawio  Search-Thread-Model.drawio
frontend/: .dockerignore  Dockerfile  requirements.txt
scripts/: reset-data.sh  run-docker-compose.sh
tests/: main.py  payload.py  requirements.txt  search_request.py  search_types.py
yew-frontend/: Cargo.toml  Trunk.toml  index.html  style.css
yew-frontend/src/: app.rs  main.rs  router.rs
yew-frontend/src/components/: navbar.rs
yew-frontend/src/routes/: search.rs
yew-frontend/src/utils/: mod.rs
yew-frontend/src/utils/api/: client.rs  mod.rs  search.rs
(+52 files in other folders)
